--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@PC-LAPTOP-REMY
 LastExecutedLaunchName=PC-LAPTOP-REMY
 LastExecutedPIEPreviewDevice=
@@ -165,7 +165,7 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 BP_Enemy_C=BP_Enemy_C.Collision.Collision
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
+SkeletalMeshComponent=
 CapsuleComponent=
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
@@ -187,7 +187,7 @@ K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Col
 K2Node=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 BP_Portal_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_EnemyShooter_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
-K2Node_Variable=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
+K2Node_Variable=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 BP_EnemyProjectile_C=BP_Enemy_C.Collision.Collision
 BP_EnemyBasic_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
@@ -295,7 +295,7 @@ MovieSceneTakeSettings=
 TakeRecorderMicrophoneAudioSourceSettings=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-MovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
+MovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 ArrowComponent=BP_Enemy_C.Collision.Collision
 ProjectileMovementComponent=BP_Enemy_C.Collision.Collision
 K2Node_CallFunction=BP_Enemy_C.Collision.Collision,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
@@ -1872,11 +1872,16 @@ BP_WallRide_C.HLOD=True
 BP_WallRide_C.Physics=True
 BP_WallRide_C.WorldPartition=True
 BP_WallRide_C.Events=True
+BP_Weapon_Component_C.Capacities=True
+BP_Weapon_Component_C.Platform=True
+BP_FirstPersonCharacter_C.Movements=True
+BP_FirstPersonCharacter_C.Capacities=True
+W_Main_C.Default=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_EnemyAttack
-MRUItem1=/Game/Blueprints/BP_WallRide
-MRUItem2=/Game/Maps/ArenaTest
+MRUItem0=/Game/Maps/ArenaTest
+MRUItem1=/Game/Blueprints/BP_EnemyAttack
+MRUItem2=/Game/Blueprints/BP_WallRide
 MRUItem3=/Game/Widget/W_Main
 MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
 MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
