Add objective Bug fix

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,10 +165,10 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 CapsuleComponent=
 SceneComponent=
-Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
+Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 Blockout_Tube_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 RotatingMovementComponent=BP_Enemy_C.Collision.Collision
 Blockout_Skewbox_C=BP_Enemy_C.Collision.Collision
@@ -307,16 +307,16 @@ BoxComponent=BP_Enemy_C.Collision.Collision
 W_SpawnWidget_C=
 Actor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 PlayerStart=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
-Blockout_Cylinder_C=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
+Blockout_Cylinder_C=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 NiagaraComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
-BP_EnemyAttack_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
+BP_EnemyAttack_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 Blueprint=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 CameraComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 Character=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
-CharacterMovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
+CharacterMovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 NavMovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 K2Node_EnhancedInputAction=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
-BP_WallRide_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
+BP_WallRide_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 PointLight=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
 BP_GravityChanger_C=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
 PlayerController=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -324,13 +324,13 @@ PawnSensingComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.C
 K2Node_FunctionResult=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 W_Main_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 K2Node_Timeline=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
-BP_Objective_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
-WidgetComponent=
+BP_Objective_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
+WidgetComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 W_Objective_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 CableComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1959,24 +1959,25 @@ W_Objective_C.Clipping=True
 W_Objective_C.Navigation=True
 BP_WallRide_C.TransformCommon=True
 BP_WallRide_C.Networking=True
+BP_Objective_C.Default=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/FirstPersonMap
-MRUItem1=/Game/Maps/ArenaTest
-MRUItem2=/Game/Blueprints/BP_Objective
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem5=/Game/Widget/W_Main
-MRUItem6=/Game/Widget/W_Objective
-MRUItem7=/Game/FirstPerson/Input/Actions/IA_Grapple
-MRUItem8=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
-MRUItem9=/Game/FirstPerson/Input/Actions/IA_LightSpellChoice
-MRUItem10=/Engine/EngineResources/WhiteSquareTexture
-MRUItem11=/Engine/EngineMaterials/Widget3DPassThrough
-MRUItem12=/Engine/EngineMaterials/Widget3DPassThrough_Masked
-MRUItem13=/Game/CustomGameInstance
-MRUItem14=/Game/Blueprints/BP_EnemyAttack
-MRUItem15=/Game/Blueprints/BP_WallRide
+MRUItem0=/Game/Blueprints/BP_WallRide
+MRUItem1=/Game/Maps/FirstPersonMap
+MRUItem2=/Game/Maps/ArenaTest
+MRUItem3=/Game/Blueprints/BP_Objective
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem6=/Game/Widget/W_Main
+MRUItem7=/Game/Widget/W_Objective
+MRUItem8=/Game/FirstPerson/Input/Actions/IA_Grapple
+MRUItem9=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem10=/Game/FirstPerson/Input/Actions/IA_LightSpellChoice
+MRUItem11=/Engine/EngineResources/WhiteSquareTexture
+MRUItem12=/Engine/EngineMaterials/Widget3DPassThrough
+MRUItem13=/Engine/EngineMaterials/Widget3DPassThrough_Masked
+MRUItem14=/Game/CustomGameInstance
+MRUItem15=/Game/Blueprints/BP_EnemyAttack
 MRUItem16=/Game/Materials/M_Invible
 MRUItem17=/Game/Blueprints/BP_GravityChanger
 MRUItem18=/Game/FirstPerson/Blueprints/Enum_Capacities
@@ -2079,10 +2080,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_EnemyAttack.BP_EnemyAttack;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprints/BP_Objective.BP_Objective;
 RecentlyPlaced=/BlockoutToolsPlugin/Blueprints/Blockout_Box.Blockout_Box;
-RecentlyPlaced=/Game/Blueprints/BP_EnemyAttack.BP_EnemyAttack;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprints/BP_GravityChanger.BP_GravityChanger;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
