Debug pause menu

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,9 +163,9 @@ InputAction=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.C1C838AA465C8F8E79A2ACB12EDDBDF6
 StaticMeshComponent=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 CapsuleComponent=
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
@@ -315,7 +315,7 @@ CameraComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collis
 Character=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash
 CharacterMovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 NavMovementComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
-K2Node_EnhancedInputAction=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
+K2Node_EnhancedInputAction=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 BP_WallRide_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
 PointLight=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
 BP_GravityChanger_C=CapsuleComponent.Collision.Collision,BP_Enemy_C.Collision.Collision
@@ -392,7 +392,7 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/ArenaTest
+LastLevel=/Game/Maps/FirstPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -2150,26 +2150,26 @@ UserDefinedStruct.Structure=True
 W_SkillTree_C.Default=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/Struct_SkillUpgrade
-MRUItem1=/Game/Widget/SkillTree/W_SkillButton
-MRUItem2=/Game/Widget/W_SpawnWidget
-MRUItem3=/Game/Maps/ArenaTest
-MRUItem4=/Game/Maps/FirstPersonMap
-MRUItem5=/Game/Widget/W_Menu
-MRUItem6=/Game/Maps/Menu
-MRUItem7=/Game/Widget/W_SkillTree
-MRUItem8=/Game/Widget/W_Pause
-MRUItem9=/Game/FirstPerson/Input/Actions/IA_Pause
-MRUItem10=/Game/FirstPerson/Input/IMC_Default
-MRUItem11=/Game/CustomGameInstance
-MRUItem12=/Game/Blueprints/BP_PlatformPieces
-MRUItem13=/Game/Blueprints/BP_PlatformReveal
-MRUItem14=/Game/Blueprints/Interface_Platform
-MRUItem15=/Game/Blueprints/BP_DebrisMaker
-MRUItem16=/Game/Widget/W_Main
-MRUItem17=/Game/Blueprints/BP_Portal
-MRUItem18=/Game/Materials/M_TestPortalResource
-MRUItem19=/Game/Blueprints/BP_PortalResource
+MRUItem0=/Game/CustomGameInstance
+MRUItem1=/Game/FirstPerson/Blueprints/Struct_SkillUpgrade
+MRUItem2=/Game/Widget/SkillTree/W_SkillTree
+MRUItem3=/Game/Widget/Menu/W_Pause
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem6=/Game/Widget/SkillTree/W_SkillButton
+MRUItem7=/Game/Widget/W_SpawnWidget
+MRUItem8=/Game/Maps/ArenaTest
+MRUItem9=/Game/Maps/FirstPersonMap
+MRUItem10=/Game/Widget/W_Menu
+MRUItem11=/Game/Maps/Menu
+MRUItem12=/Game/Widget/W_SkillTree
+MRUItem13=/Game/Widget/W_Pause
+MRUItem14=/Game/FirstPerson/Input/Actions/IA_Pause
+MRUItem15=/Game/FirstPerson/Input/IMC_Default
+MRUItem16=/Game/Blueprints/BP_PlatformPieces
+MRUItem17=/Game/Blueprints/BP_PlatformReveal
+MRUItem18=/Game/Blueprints/Interface_Platform
+MRUItem19=/Game/Blueprints/BP_DebrisMaker
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -3728,7 +3728,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [MaterialInstanceEditor]
 bShowGrid=True
