--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ StaticMeshComponent=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
+SkeletalMeshComponent=
 CapsuleComponent=
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
@@ -180,15 +180,15 @@ MaterialInstanceConstant=
 EdGraphNode_Comment=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 K2Node_VariableSet=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 PropertyWrapper=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
-CustomGameInstance_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
-K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription
+CustomGameInstance_C=
+K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 K2Node_VariableGet=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
-K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
+K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 K2Node=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision
 BP_Portal_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_EnemyShooter_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 K2Node_Variable=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
-BP_EnemyProjectile_C=BP_Enemy_C.Collision.Collision
+BP_EnemyProjectile_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 BP_EnemyBasic_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
@@ -339,9 +339,10 @@ W_Menu_C=
 W_SkillTree_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 W_SkillButton_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 TextBlock=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription
+AISenseEvent_Damage=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -521,13 +522,13 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 BlockoutToolsSettings="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object\" "
 Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Cylinder\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.skillsList\" "
+Visual="\"Object\" \"Object.skillsList\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
 StaticMeshComponent="\"Object\" "
 PreviewMaterial="\"Object\" "
@@ -555,7 +556,7 @@ MaterialInstance="\"Object\" "
 BackgroundBlur="\"Object\" "
 ContentWidget="\"Object\" "
 W_SpellWheel_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.skillsList\" "
 MaterialExpressionConstant4Vector="\"Object\" "
 MaterialExpressionFunctionOutput="\"Object\" "
 MaterialFunction="\"Object\" "
@@ -627,9 +628,11 @@ AnimInstance="\"Object\" "
 W_Pause_C="\"Object\" "
 VerticalBox="\"Object\" "
 Button="\"Object\" "
-W_SkillTree_C="\"Object\" "
+W_SkillTree_C="\"Object\" \"Object.skillsList\" "
 W_Menu_C="\"Object\" "
 W_SkillButton_C="\"Object\" "
+AISenseEvent_Damage="\"Object\" "
+AISenseEvent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -640,11 +643,12 @@ OpenAssetsAtExit=/Game/Widget/Menu/W_Pause.W_Pause
 OpenAssetsAtExit=/Game/Widget/SkillTree/W_SkillTree.W_SkillTree
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/Struct_SkillUpgrade.Struct_SkillUpgrade
 OpenAssetsAtExit=/Game/CustomGameInstance.CustomGameInstance
+OpenAssetsAtExit=/Game/Blueprints/BP_EnemyProjectile.BP_EnemyProjectile
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
-InstalledPlugins=FlatNodes
 InstalledPlugins=ElectronicNodes
+InstalledPlugins=FlatNodes
 InstalledPlugins=WMFCodecs
 
 [DetailCategories]
@@ -2148,28 +2152,30 @@ W_SkillButton_C.Localization=True
 W_SkillButton_C.Events=True
 UserDefinedStruct.Structure=True
 W_SkillTree_C.Default=True
+W_SkillButton_C.Default=True
+W_SkillButton_C.Designer=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/CustomGameInstance
-MRUItem1=/Game/FirstPerson/Blueprints/Struct_SkillUpgrade
-MRUItem2=/Game/Widget/SkillTree/W_SkillTree
-MRUItem3=/Game/Widget/Menu/W_Pause
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem6=/Game/Widget/SkillTree/W_SkillButton
-MRUItem7=/Game/Widget/W_SpawnWidget
-MRUItem8=/Game/Maps/ArenaTest
-MRUItem9=/Game/Maps/FirstPersonMap
-MRUItem10=/Game/Widget/W_Menu
-MRUItem11=/Game/Maps/Menu
-MRUItem12=/Game/Widget/W_SkillTree
-MRUItem13=/Game/Widget/W_Pause
-MRUItem14=/Game/FirstPerson/Input/Actions/IA_Pause
-MRUItem15=/Game/FirstPerson/Input/IMC_Default
-MRUItem16=/Game/Blueprints/BP_PlatformPieces
-MRUItem17=/Game/Blueprints/BP_PlatformReveal
-MRUItem18=/Game/Blueprints/Interface_Platform
-MRUItem19=/Game/Blueprints/BP_DebrisMaker
+MRUItem0=/Game/Blueprints/BP_EnemyProjectile
+MRUItem1=/Game/CustomGameInstance
+MRUItem2=/Game/FirstPerson/Blueprints/Struct_SkillUpgrade
+MRUItem3=/Game/Widget/SkillTree/W_SkillTree
+MRUItem4=/Game/Widget/Menu/W_Pause
+MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem6=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem7=/Game/Widget/SkillTree/W_SkillButton
+MRUItem8=/Game/Widget/W_SpawnWidget
+MRUItem9=/Game/Maps/ArenaTest
+MRUItem10=/Game/Maps/FirstPersonMap
+MRUItem11=/Game/Widget/W_Menu
+MRUItem12=/Game/Maps/Menu
+MRUItem13=/Game/Widget/W_SkillTree
+MRUItem14=/Game/Widget/W_Pause
+MRUItem15=/Game/FirstPerson/Input/Actions/IA_Pause
+MRUItem16=/Game/FirstPerson/Input/IMC_Default
+MRUItem17=/Game/Blueprints/BP_PlatformPieces
+MRUItem18=/Game/Blueprints/BP_PlatformReveal
+MRUItem19=/Game/Blueprints/Interface_Platform
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
