--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -524,11 +524,11 @@ BlockoutToolsSettings="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
-BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Cylinder\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
+BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.skillsList\" "
-Visual="\"Object\" \"Object.skillsList\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
 StaticMeshComponent="\"Object\" "
 PreviewMaterial="\"Object\" "
@@ -556,7 +556,7 @@ MaterialInstance="\"Object\" "
 BackgroundBlur="\"Object\" "
 ContentWidget="\"Object\" "
 W_SpellWheel_C="\"Object\" "
-UserWidget="\"Object\" \"Object.skillsList\" "
+UserWidget="\"Object\" "
 MaterialExpressionConstant4Vector="\"Object\" "
 MaterialExpressionFunctionOutput="\"Object\" "
 MaterialFunction="\"Object\" "
@@ -2154,6 +2154,7 @@ UserDefinedStruct.Structure=True
 W_SkillTree_C.Default=True
 W_SkillButton_C.Default=True
 W_SkillButton_C.Designer=True
+CustomGameInstance_C.Respawn=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_EnemyProjectile
@@ -2323,7 +2324,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=316.000 Y=152.000
+ScreenPosition=X=118.000 Y=3.000
 WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
