--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ StaticMeshComponent=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
+SkeletalMeshComponent=
 CapsuleComponent=
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB
@@ -344,7 +344,7 @@ W_Options_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,
 EdGraphNode=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Widget
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -404,7 +404,7 @@ Object="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[12]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" \"Object.Mappings.Mappings.Mappings[16]\" "
@@ -593,7 +593,7 @@ BP_EnemyProjectile_C="\"Object\" "
 K2Node_InputAxisEvent="\"Object\" "
 K2Node_Event="\"Object\" "
 K2Node_EditablePinBase="\"Object\" "
-K2Node="\"Object\" "
+K2Node="\"Object\" \"Object.PinOptions.PinNames\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
 Field="\"Object\" "
@@ -641,15 +641,15 @@ UserWidgetBlueprint="\"Object\" "
 CheckBox="\"Object\" "
 Spacer="\"Object\" "
 Slider="\"Object\" "
-ComboBoxString="\"Object\" \"Object.Style.Font\" "
+ComboBoxString="\"Object\" \"Object.Content.DefaultOptions\" \"Object.Style.Font\" "
 W_Options_C="\"Object\" "
+K2Node_SwitchString="\"Object\" \"Object.PinOptions.PinNames\" "
+K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Weapon_Component.BP_Weapon_Component
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/BP_WallRide.BP_WallRide
-OpenAssetsAtExit=/Game/CustomGameInstance.CustomGameInstance
+OpenAssetsAtExit=/Game/Widget/Menu/W_Options.W_Options
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -2247,16 +2247,22 @@ BP_SkillPoints_C.WorldPartition=True
 BP_SkillPoints_C.Events=True
 W_Pause_C.Layout=True
 W_Options_C.Default=True
+BP_FirstPersonCharacter_C.Grapple=True
+BP_FirstPersonCharacter_C.HUD=True
+BP_FirstPersonCharacter_C.Crouch=True
+BP_FirstPersonCharacter_C.Dash=True
+BP_FirstPersonCharacter_C.WallRide=True
+K2Node_SwitchString.PinOptions=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/W_Main
-MRUItem1=/Game/FirstPerson/Input/Actions/IA_SkillTree
+MRUItem0=/Game/Widget/Menu/W_Options
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
 MRUItem2=/Game/CustomGameInstance
 MRUItem3=/Game/Blueprints/BP_WallRide
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem6=/Game/Maps/FirstPersonMap
-MRUItem7=/Game/Widget/Menu/W_Options
+MRUItem4=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem5=/Game/Widget/W_Main
+MRUItem6=/Game/FirstPerson/Input/Actions/IA_SkillTree
+MRUItem7=/Game/Maps/FirstPersonMap
 MRUItem8=/Game/Maps/ArenaTest
 MRUItem9=/Game/Blueprints/BP_Platform
 MRUItem10=/Game/Widget/Wheel/W_SpellWheel
@@ -3539,6 +3545,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
