Finish Options usability

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,7 +163,7 @@ InputAction=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.C1C838AA465C8F8E79A2ACB12EDDBDF6
 StaticMeshComponent=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision
 SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList
 CapsuleComponent=
@@ -348,7 +348,7 @@ EnemyShoot_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -663,7 +663,7 @@ BodySetupCore="\"Object\" "
 BoneProxy="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
